fix: pagination gap and remove excess modal-window props

--- a/src/pages/packs/packs.module.scss
+++ b/src/pages/packs/packs.module.scss
@@ -12,7 +12,7 @@
   }
 
   .pagination {
-    @include flex(row, 0, 24px, center, center);
+    @include flex(row, 24px, 24px, center, center);
 
     margin-top: 64px;
   }
